[gd_scene load_steps=2 format=2]

[ext_resource path="res://BrushStroke/BrushStroke.gd" type="Script" id=1]

[node name="BrushStroke" type="Node2D"]
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Line2D" type="Line2D" parent="."]

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
